# corp-resource-planner

./: README.md  docker-compose.yml
app/: main.py  models.py  seed.py
frontend/: Dockerfile  pyproject.toml
frontend/app/: main.py
frontend/app/templates/: employees.html
services/project/: Dockerfile  project.db  pyproject.toml  test_project.db
services/project/app/: database.py  main.py  models.py  schemas.py
services/project/tests/: test_projects.py
services/resource/: pyproject.toml  resource.db  test_resource.db
services/resource/app/: database.py  main.py  models.py  schemas.py
services/resource/tests/: test_employees.py
